--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -18,3 +18,15 @@ ul
 {
     list-style-type: none;
 }
+
+.candy {
+  padding: 10px;
+}
+
+footer {
+  margin-top: 100px;
+  background: rgba(0,0,0,0.4);
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
